working get profile

--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/soapsropes/fetlife/issues"
   },
-  "homepage": "https://github.com/soapsropes/fetlife#readme"
+  "homepage": "https://github.com/soapsropes/fetlife#readme",
+  "dependencies": {
+    "lodash": "^4.17.10",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
+    "simple-oauth2": "^2.2.0"
+  }
 }
