--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "homepage": "https://github.com/soapsropes/fetlife#readme",
   "dependencies": {
     "lodash": "^4.17.10",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.2",
-    "simple-oauth2": "^2.2.0"
+    "simple-oauth2": "^2.2.0",
+    "wreck": "^14.0.2"
   }
 }
