--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "lodash": "^4.17.10",
     "simple-oauth2": "^2.2.0",
     "wreck": "^14.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.12.0"
   }
 }
