--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "FetLife API client",
   "main": "dist/index.js",
   "scripts": {
-    "prepublish": "babel lib --out-dir dist --presets=@babel/env",
+    "prepare": "babel lib --out-dir dist --presets=@babel/env",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
