--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@babel/polyfill": "^7.0.0-beta.51",
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
-    "simple-oauth2": "^1.6.0"
+    "simple-oauth2-browser": "^1.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.51",
