--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-beta.51",
     "axios": "^0.18.0",
+    "bottleneck": "^1.16.0",
     "lodash": "^4.17.10",
     "simple-oauth2-browser": "^1.6.0"
   },
