--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
   },
   "homepage": "https://github.com/soapsropes/fetlife#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.51",
+    "@babel/polyfill": "^7.6.0",
     "axios": "^0.18.0",
     "bottleneck": "^1.16.0",
-    "lodash": "^4.17.11",
-    "simple-oauth2-browser": "^1.7.0"
+    "lodash": "^4.17.15",
+    "simple-oauth2-browser": "^1.7.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.51",
-    "@babel/core": "^7.0.0-beta.51",
-    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.12.0"
